# falkordb-pyg

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: spellcheck-settings.yml  wordlist.txt
.github/workflows/: lint.yml  publish.yaml  publish.yml  spellcheck.yml  test.yml
examples/: train_example.py
falkordb_pyg/: __init__.py  feature_store.py  graph_store.py  utils.py
tests/: conftest.py  test_e2e.py  test_feature_store.py  test_graph_store.py  test_integration.py
